// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorGroupOverview -> List should render columns correctly 1`] = `
<EuiToolTip
  content="opbeans-python"
  delay="regular"
  id="service-name-tooltip"
  position="top"
>
  <Styled(Connect(UnconnectedKibanaLink))
    hash="/opbeans-python/transactions"
  >
    opbeans-python
  </Styled(Connect(UnconnectedKibanaLink))>
</EuiToolTip>
`;

exports[`ErrorGroupOverview -> List should render empty state 1`] = `
<ManagedTable
  columns={
    Array [
      Object {
        "field": "serviceName",
        "name": "Name",
        "render": [Function],
        "sortable": true,
        "width": "50%",
      },
      Object {
        "field": "agentName",
        "name": "Agent",
        "render": [Function],
        "sortable": true,
      },
      Object {
        "dataType": "number",
        "field": "avgResponseTime",
        "name": "Avg. response time",
        "render": [Function],
        "sortable": true,
      },
      Object {
        "dataType": "number",
        "field": "transactionsPerMinute",
        "name": "Trans. per minute",
        "render": [Function],
        "sortable": true,
      },
      Object {
        "dataType": "number",
        "field": "errorsPerMinute",
        "name": "Errors per minute",
        "render": [Function],
        "sortable": true,
      },
    ]
  }
  initialSort={
    Object {
      "direction": "asc",
      "field": "serviceName",
    }
  }
  items={Array []}
/>
`;

exports[`ErrorGroupOverview -> List should render with data 1`] = `
<ManagedTable
  columns={
    Array [
      Object {
        "field": "serviceName",
        "name": "Name",
        "render": [Function],
        "sortable": true,
        "width": "50%",
      },
      Object {
        "field": "agentName",
        "name": "Agent",
        "render": [Function],
        "sortable": true,
      },
      Object {
        "dataType": "number",
        "field": "avgResponseTime",
        "name": "Avg. response time",
        "render": [Function],
        "sortable": true,
      },
      Object {
        "dataType": "number",
        "field": "transactionsPerMinute",
        "name": "Trans. per minute",
        "render": [Function],
        "sortable": true,
      },
      Object {
        "dataType": "number",
        "field": "errorsPerMinute",
        "name": "Errors per minute",
        "render": [Function],
        "sortable": true,
      },
    ]
  }
  initialSort={
    Object {
      "direction": "asc",
      "field": "serviceName",
    }
  }
  items={
    Array [
      Object {
        "agentName": "nodejs",
        "avgResponseTime": null,
        "errorsPerMinute": 46.06666666666667,
        "serviceName": "opbeans-node",
        "transactionsPerMinute": 0,
      },
      Object {
        "agentName": "python",
        "avgResponseTime": 91535.42944785276,
        "errorsPerMinute": 12.6,
        "serviceName": "opbeans-python",
        "transactionsPerMinute": 86.93333333333334,
      },
    ]
  }
/>
`;
